# clodox

./: AGENTS.md  Cargo.toml  PHASE4_PLAN.md  PHASE5_PLAN.md  PLAN.md  README.md
crates/bridge/: Cargo.toml
crates/bridge/src/: daemon.rs  jwt_utils.rs  lib.rs  messaging.rs  permission_callbacks.rs  repl_bridge.rs  session_runner.rs  transport.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli_args.rs  logging.rs  main.rs  session.rs
crates/commands/: Cargo.toml
crates/commands/src/: commit.rs  config.rs  context.rs  cost.rs  diff.rs  doctor.rs  executor.rs  help.rs  lib.rs  login.rs  logout.rs  mcp.rs  memory.rs  registry.rs  resume.rs  share.rs  skills.rs  tasks.rs  theme.rs  traits.rs  vim.rs
crates/commands/src/tier1/: clear.rs  compact.rs  config.rs  cost.rs  diff.rs  help.rs  login.rs  logout.rs  mod.rs  resume.rs
crates/commands/src/tier2/: commit.rs  context.rs  mcp.rs  memory.rs  mod.rs  model.rs  review.rs  skills.rs  tasks.rs  theme.rs  vim.rs
crates/commands/src/tier3/: agents.rs  branch.rs  brief.rs  copy.rs  doctor.rs  effort.rs  exit.rs  fast.rs  feedback.rs  hooks.rs  mod.rs  model.rs  output_style.rs  permissions.rs  pr_comments.rs  share.rs  version.rs
crates/commands/src/utility/: btw.rs  chrome.rs  color.rs  context.rs  export.rs  files.rs  ide.rs  init.rs  keybindings.rs  mod.rs  passes.rs  plan.rs  privacy_settings.rs  rate_limit_options.rs  release_notes.rs  reload_plugins.rs  remote_env.rs  remote_setup.rs  rename.rs  sandbox_toggle.rs  stats.rs  status.rs  stickers.rs  tag.rs  terminal_setup.rs  thinkback.rs  thinkback_play.rs  upgrade.rs  usage.rs  voice.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/commands/: mod.rs
crates/core/src/messages/: mod.rs
crates/core/src/permissions/: mod.rs
crates/core/src/settings/: cache.rs  global_config.rs  hooks.rs  mcp.rs  merge.rs  mod.rs  permissions.rs  sandbox.rs  sources.rs  ui.rs
crates/core/src/state/: mod.rs
crates/core/src/tools/: mod.rs
crates/core/src/types/: mod.rs
crates/query/: Cargo.toml
crates/query/src/: api_client.rs  api_types.rs  compaction.rs  engine.rs  errors.rs  lib.rs  retry.rs  state.rs  streaming.rs  system_prompt.rs
crates/services/: Cargo.toml
crates/services/src/: analytics.rs  api.rs  compact.rs  extract_memories.rs  lib.rs  lsp.rs  mcp.rs  plugins.rs  prompt_suggestion.rs  team_memory_sync.rs  token_estimation.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  registry.rs  utils.rs  web_fetch.rs  web_search.rs
crates/tui/: Cargo.toml
crates/tui/src/: animations.rs  input.rs  lib.rs  main_loop.rs  query_events.rs  state.rs  terminal.rs  theme.rs  virtual_scroll.rs
crates/tui/src/components/: box_widget.rs  collapsible.rs  markdown.rs  markdown_table.rs  mod.rs  status_line.rs  text_widget.rs
crates/tui/src/components/messages/: assistant_text.rs  assistant_thinking.rs  assistant_tool_use.rs  converter.rs  mod.rs  rate_limit.rs  row.rs  system_error.rs  user_command.rs  user_prompt.rs  user_text.rs  user_tool_result.rs
crates/tui/src/components/permissions/: ask_user.rs  bash.rs  dialog.rs  file_edit.rs  file_write.rs  filesystem.rs  mod.rs
crates/tui/src/components/prompt_input/: autocomplete.rs  footer.rs  history.rs  mod.rs  text_input.rs
crates/tui/src/components/spinner/: animation_row.rs  brief.rs  glyph.rs  mod.rs  stall_detection.rs  with_verb.rs
crates/tui/src/components/tool_use/: agent.rs  bash.rs  loader.rs  mod.rs  read.rs  web_fetch.rs  web_search.rs  write.rs
crates/tui/src/screens/: fullscreen.rs  login.rs  logo_header.rs  mod.rs  onboarding.rs  repl.rs  resume.rs  trust_dialog.rs  welcome.rs
