[package]
name = "cc-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
cc-core.workspace = true
cc-services.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest.workspace = true
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"

[lints]
workspace = true
