[package]
name = "cc-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "claude-code"
path = "src/main.rs"

[dependencies]
cc-core.workspace = true
cc-query.workspace = true
cc-tools.workspace = true
cc-commands.workspace = true
cc-services.workspace = true
cc-bridge.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
uuid.workspace = true
