[package]
name = "cc-commands"
version.workspace = true
edition.workspace = true

[dependencies]
cc-core.workspace = true
cc-query.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
ratatui = "0.29"
strsim.workspace = true
dirs.workspace = true
