[package]
name = "cc-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
schemars.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
indexmap.workspace = true
regex = "1"
