[package]
name = "cc-query"
version.workspace = true
edition.workspace = true

[dependencies]
cc-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
[lints]
workspace = true
