[package]
name = "cc-services"
version.workspace = true
edition.workspace = true

[dependencies]
cc-core.workspace = true
cc-query.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
async-stream = "0.3"
